Solved thumbnail alignment

--- a/src/style.css
+++ b/src/style.css
@@ -56,6 +56,8 @@ nav.navbar {
   margin: 0;
   background-color: rgba(255, 255, 255, 0.6);
   height: 420px;
+  min-width: 290px;
+  max-width: 300px;
   word-wrap: break-word;
   overflow: hidden;
 }
